# oci-haskell-sdk

./: ChangeLog.md  Dockerfile  Makefile  README.md  bmcs-haskell-sdk.cabal  ci.sh  codegen.py  oci-haskell-sdk.cabal  package.yaml  signing_example.py  stack.yaml
archive/OCI/: Credentials.hs
archive/OCI/Internal/: Request.hs
archive/OCI/Model/: Region.hs
examples/Network/Oracle/BMC/: Instances.hs
hack/: codegen.py
src/Network/HTTP/: Dispatch.hs  Signature.hs  Signer.hs
src/Network/Oracle/: OCI.hs
src/Network/Oracle/BMC/: Credentials.hs  Exception.hs  Path.hs  Region.hs  RequestBase.hs  Signature.hs  Util.hs
src/Network/Oracle/BMC/Core/: BlockStorage.hs  Client.hs  Compute.hs  ComputeRequest.hs  Instance.hs  Requests.hs  VirtualNetwork.hs
src/Network/Oracle/BMC/Core/Model/: APIError.hs  CaptureConsoleHistoryDetails.hs  ConsoleHistory.hs  Cpe.hs  CreateDrgAttachmentDetails.hs  CreateVcnDetails.hs  CreateVolumeDetails.hs  EgressSecurityRule.hs  IPSecConnection.hs  IPSecConnectionDeviceConfig.hs  IScsiVolumeAttachment.hs  IcmpOptions.hs  Image.hs  IngressSecurityRule.hs  Instance.hs  InstanceCredentials.hs  LaunchInstanceDetails.hs  RouteTable.hs  Subnet.hs  TcpOptions.hs  UdpOptions.hs  UpdateCpeDetails.hs  UpdateDhcpDetails.hs  UpdateInstanceDetails.hs  UpdateInternetGatewayDetails.hs  UpdateSubnetDetails.hs  UpdateVolumeBackupDetails.hs  UpdateVolumeDetails.hs  VNic.hs  Vcn.hs  Vnic.hs  VnicAttachment.hs  VolumeBackup.hs
src/Network/Oracle/BMC/Core/Requests/: All.hs  AttachVolumeRequest.hs  Base.hs  CaptureConsoleHistoryRequest.hs  CreateCpeRequest.hs  CreateDhcpOptionsRequest.hs  CreateDrgAttachmentRequest.hs  CreateDrgRequest.hs  CreateIPSecConnectionRequest.hs  CreateImageRequest.hs  CreateInternetGatewayRequest.hs  CreateRouteTableRequest.hs  CreateSecurityListRequest.hs  CreateSubnetRequest.hs  CreateVcnRequest.hs  CreateVolumeBackupRequest.hs  CreateVolumeRequest.hs  DeleteConsoleHistoryRequest.hs  DeleteCpeRequest.hs  DeleteDhcpOptionsRequest.hs  DeleteDrgAttachmentRequest.hs  DeleteDrgRequest.hs  DeleteIPSecConnectionRequest.hs  DeleteImageRequest.hs  DeleteInternetGatewayRequest.hs  DeleteRouteTableRequest.hs  DeleteSecurityListRequest.hs  DeleteSubnetRequest.hs  DeleteVcnRequest.hs  DeleteVolumeBackupRequest.hs  DeleteVolumeRequest.hs  DetachVolumeRequest.hs  GetConsoleHistoryContentRequest.hs  GetConsoleHistoryRequest.hs  GetCpeRequest.hs  GetDhcpOptionsRequest.hs  GetDrgAttachmentRequest.hs  GetDrgRequest.hs  GetIPSecConnectionDeviceConfigRequest.hs  GetIPSecConnectionDeviceStatusRequest.hs  (+48 more)
src/Network/Oracle/BMC/Core/Types/: Instance.hs
src/Network/Oracle/BMC/Internal/: .#Util.hs  Dispatcher.hs  Exception.hs  Query.hs  Request.hs  Signature.hs  Util.hs
src/Network/Oracle/BMC/Internal/Model/: APIError.hs
src/Network/Oracle/BMC/Model/: OCID.hs  Region.hs
src/Network/Oracle/BMC/Object/: Api.hs
src/Network/Oracle/BMC/ObjectStorage/: ObjectStorage.hs
src/Network/Oracle/BMC/ObjectStorage/Requests/: CreateBucketRequest.hs  DeleteBucketRequest.hs  GetBucketRequest.hs
src/Network/Oracle/BMC/Transport/: Request.hs  SignedRequest.hs  Specialized.hs
src/Network/Oracle/BMCS/: Api.hs  Credentials.hs
src/Network/Oracle/BMCS/Transport/: Request.hs
src/Network/Oracle/HTTP/: OpenSSL.hs  Signer.hs
src/Network/Oracle/OCI/: Credentials.hs
src/Network/Oracle/OCI/Common/: Api.hs  Client.hs  Configuration.hs  Credentials.hs  Exception.hs  OpenSSL.hs  Region.hs  Request.hs  Signer.hs
src/Network/Oracle/OCI/Common/Signatures/: Crypto.hs  OpenSSL.hs  Signer.hs
src/Network/Oracle/OCI/Core/: BlockStorage.hs  Compute.hs  VirtualNetwork.hs
src/Network/Oracle/OCI/Core/Model/: AttachIScsiVolumeDetails.hs  AttachVolumeDetails.hs  CreateCpeDetails.hs  CreateDhcpDetails.hs  CreateDrgDetails.hs  CreateIPSecConnectionDetails.hs  CreateImageDetails.hs  CreateInternetGatewayDetails.hs  CreateRouteTableDetails.hs  CreateSecurityListDetails.hs  CreateSubnetDetails.hs  CreateVolumeBackupDetails.hs  DhcpDnsOption.hs  DhcpOption.hs  DhcpOptions.hs  DhcpSearchDomainOption.hs  Drg.hs  DrgAttachment.hs  IPSecConnectionDeviceStatus.hs  Image.hs  InternetGateway.hs  LaunchInstanceDetails.hs  PortRange.hs  RouteRule.hs  SecurityList.hs  Shape.hs  UpdateDrgAttachmentDetails.hs  UpdateDrgDetails.hs  UpdateIPSecConnectionDetails.hs  UpdateImageDetails.hs  UpdateRouteTableDetails.hs  UpdateSecurityListDetails.hs  UpdateVcnDetails.hs  Volume.hs  VolumeAttachment.hs
src/Network/Oracle/OCI/Core/Requests/: AttachVolumeRequest.hs  CaptureConsoleHistoryRequest.hs  CreateInternetGatewayRequest.hs  CreateRouteTableRequest.hs  CreateSubnetRequest.hs  CreateVcnRequest.hs  CreateVolumeRequest.hs  DeleteConsoleHistoryRequest.hs  DeleteDhcpOptionsRequest.hs  DeleteDrgRequest.hs  DeleteInternetGatewayRequest.hs  DeleteRouteTableRequest.hs  DeleteSecurityListRequest.hs  DeleteSubnetRequest.hs  DeleteVcnRequest.hs  DetachVolumeRequest.hs  GetConsoleHistoryContentRequest.hs  GetCpeRequest.hs  GetDhcpOptionsRequest.hs  GetDrgAttachmentRequest.hs  GetDrgRequest.hs  GetIPSecConnectionDeviceConfigRequest.hs  GetIPSecConnectionRequest.hs  GetImageRequest.hs  GetInstanceRequest.hs  GetVolumeBackupRequest.hs  GetWindowsInstanceInitialCredentialsRequest.hs  LaunchInstanceRequest.hs  ListConsoleHistoriesRequest.hs  ListCpesRequest.hs  ListDhcpOptionsRequest.hs  ListDrgAttachmentsRequest.hs  ListDrgsRequest.hs  ListIPSecConnectionsRequest.hs  ListImagesRequest.hs  ListSubnetsRequest.hs  ListVcnsRequest.hs  ListVolumeBackupsRequest.hs  TerminateInstanceRequest.hs  UpdateDrgRequest.hs  (+3 more)
src/Network/Oracle/OCI/Internal/: Dispatcher.hs  Exception.hs  Query.hs  Request.hs  Signature.hs
src/Network/Oracle/OCI/Internal/Model/: APIError.hs
src/Network/Oracle/OCI/Model/: OCID.hs
test/Fixtures/: bmcs_api_key.pem  config
test/Network/Oracle/BMC/: CredentialsSpec.hs  SignatureSpec.hs
test/Network/Oracle/BMC/Core/: ComputeSpec.hs
test/Network/Oracle/OCI/Common/: CredentialsSpec.hs  SignatureSpec.hs
