name:                bmcs-haskell-sdk
version:             0.1.0.0
synopsis:            Haskell driver for Oracle Bare Metal Cloud
description:         Please see README.md
homepage:            https://github.com/owainlewis/bmcs-haskell-sdk#readme
license:             BSD3
license-file:        LICENSE
author:              Owain Lewis
maintainer:          owain@owainlewis.com
copyright:           2017 Owain Lewis
category:            Network
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Network.Oracle.BMC.Credentials
  build-depends:       RSA >= 2.2.0
                     , aeson
                     , base >= 4.7 && < 5
                     , base64-bytestring >= 1.0.0.1
                     , bytestring >= 0.10.8.1
                     , case-insensitive >= 1.2.0.8
                     , containers >= 0.5.7.1
                     , crypto-pubkey-openssh
                     , crypto-pubkey-types >= 0.4.3
                     , directory >= 1.3.0.0
                     , http-client
                     , http-client-tls
                     , http-conduit
                     , http-types >= 0.9.1
                     , ini >= 0.3.5
                     , network-uri >= 2.6.1.0
                     , text
                     , time >= 1.6.0.1
  default-language:    Haskell2010

test-suite bmcs-haskell-sdk-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , bmcs-haskell-sdk
                     , time >= 1.6.0.1
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/owainlewis/bmcs-haskell-sdk
